--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
+NotEmpty.userForm.email=Please enter your e-mail
+typeMismatch.java.lang.Integer=You have entered a non-numeric value
