Begin total refactoring o_O

--- a/README
+++ b/README
@@ -1,10 +1,1 @@
-Hello World, example!
-
-coool! more test!!!!
-
-GitHub for Windows Test
-Hello from IDEA!!!
-
-Ubuntu
-
-EOF
+Simple Java/Spring/Hibernate project
